fix margins on iPhone 5 and similar

--- a/source/assets/stylesheets/_global.sass
+++ b/source/assets/stylesheets/_global.sass
@@ -37,7 +37,7 @@ $reddishOrange: #fc551f
 $paleSalmon: #fbc0ad
 $bodytext: #444444
 
-$mobileWidth: 320px
+$mobileWidth: 300px
 $tabletWidth: 640px
 
 body
@@ -142,11 +142,11 @@ h3
     background-size: 175px 302.5px
     height: 303px
     width: 175px
-    left: -40px
+    left: -50px
   .right
     background: no-repeat 0 0 url("/assets/images/right.png") transparent
     z-index: 1
-    left: 204px
+    left: 184px
     top: -253px
   .left, .right
     background-size: 115px 198px
